--- a/02 Module CSS/style.css
+++ b/02 Module CSS/style.css
@@ -12,7 +12,7 @@ body{
     
 }
 
-.box{
+/* .box{
     /* border: 2px solid green; */
     color: #d6d4d4;
     text-align: center;
@@ -24,7 +24,7 @@ body{
     box-shadow: 10px 10px 20px rgb(55, 55, 55);
 
 
-}
+} */
 
 .test{
     background: #f26767;
@@ -39,4 +39,36 @@ fa-brands fa-facebook
 {
     padding-right: 50px;
 
+}
+
+.first{
+    background: #5af705;
+    height: 100px;
+    width: 100px;
+    /* display: inline; */
+    float: left;
+}
+
+.second{
+    background: #516a44;
+    height: 100px;
+    width: 100px;
+    /* display: inline; */
+    float: left;
+
+}
+
+.box{
+    background: #6a16f1;
+    /* margin: 5px; */
+    height: 50px;
+    width: 50px;
+    text-align: center;
+}
+
+.container{
+    display: flex;
+    justify-content:center;
+    gap: 10px;
+    flex-direction: row-reverse;
 }
