--- a/02 Module CSS/style.css
+++ b/02 Module CSS/style.css
@@ -13,7 +13,7 @@ body{
 }
 
 /* .box{
-    /* border: 2px solid green; */
+    border: 2px solid green;
     color: #d6d4d4;
     text-align: center;
     height: 100px;
@@ -57,18 +57,77 @@ fa-brands fa-facebook
     float: left;
 
 }
-
+/* 
 .box{
-    background: #6a16f1;
-    /* margin: 5px; */
+    background: #572e9a;
+    margin: 5px; 
     height: 50px;
     width: 50px;
     text-align: center;
-}
+} */
 
-.container{
+/* .container{
     display: flex;
     justify-content:center;
     gap: 10px;
     flex-direction: row-reverse;
+    -- vartically center  
+    height: 100vh;
+    align-items: center; 
+    flex-wrap: wrap;  important to help responsibe
+} */
+
+
+.box{
+    height: 200px;
+    width: 150px;
+    border: 1px solid;
+    font-size: 25px;
+
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    flex-direction: row-reverse;
+    height: 100vh;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+.box1{
+    background: #df2626;
+    position:absolute;
+    z-index: -1;
+}
+
+.box2{
+    background: green;
+    /* position: fixed; */
+}
+
+.box3{
+    background:yellow;
+    margin-top: 20px;
+}
+
+
+.green{
+    background: green;
+    height: 200px;
+    width: 300px;
+    position:absolute;
+}
+
+.red{
+    background: red;
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    left: 33%;
+    top: 18%;
+    position: relative;
+
 }
